--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,17 +1,156 @@
 // Imports
-
-
+@import "./partials/reset";
+@import "./partials/clearfix";
+@import "./partials/general_styles";
 
 // 1. Many small items in a grid
+.small-grid-flexbox {
 
+  ul {
+    display: flex;
+    flex-flow: row wrap;
+    
+    @include respond-to('medium') {
+      margin: auto; 
+      width: 400px;     
+    }
+  
+    li {
+      flex: 0 0 10%;
+      box-sizing: border-box;
+      height: 30px;
+      text-align: center;
 
+      @include respond-to('medium') {
+        line-height: 40px;
+        height: 40px;
+        text-align: center;
+      }
+    }
+  }
+}
 
 // 2. 2-Column Grid
+.two-col-grid-flexbox {
 
+  @include respond-to('medium') {
+    display: flex;
+    flex-flow: row nowrap;
+  }
 
+  .column-1 {
+    box-sizing: border-box;
+
+    @include respond-to('medium') {
+      flex: 0 0 50%;
+      order: 2;
+    }
+  }
+
+  .column-2 {
+    box-sizing: border-box;
+
+    @include respond-to('medium') {
+      flex: 0 0 50%;
+      order: 1;
+    }
+  }
+}
 
 // 3. Centering
+.centering-formula-1 {
+  display: flex;
+  flex-flow: row nowrap;
 
+  justify-content: center;
+  align-items: center;
 
+  .centered {
+    flex: 0 0 auto;
+  }
+}
+
+.centering-formula-2 {
+  display: flex;
+  flex-flow: row nowrap;
+
+  .centered {
+    margin: auto;
+    flex: 0 0 auto;
+  }
+}
 
 // 4. Ordering
+.ordering-block {
+  display: flex;
+  flex-flow: row wrap;
+
+  @include respond-to('medium') {
+    flex-flow: row nowrap;
+  }
+
+  @include respond-to('large') {
+    justify-content: space-between;
+  }
+
+  .item {
+    flex: 0 0 100%;
+    box-sizing: border-box;
+
+    &.item-a {
+      order: 3;
+
+      @include respond-to('medium') {
+        flex: 0 0 10%;
+        order: 1;
+      }
+
+      @include respond-to('large') {
+        flex: 0 0 5%;
+        order: 4;
+      }
+    }
+
+    &.item-b {
+      order: 2;
+
+      @include respond-to('medium') {
+        flex: 1 0 30%;
+        order: 2;
+      }
+
+      @include respond-to('large') {
+        flex: 0 0 5%;
+        order: 3;
+      }
+    }
+
+    &.item-c {
+      order: 1;
+
+      @include respond-to('medium') {
+        flex: 0 0 5%;
+        order: 3;
+      }
+
+      @include respond-to('large') {
+        flex: 0 0 5%;
+        order: 4;
+      }
+    }
+
+    &.item-d {
+      order: 4;
+
+      @include respond-to('medium') {
+        flex: 0 0 5%;
+        order: 4;
+      }
+
+      @include respond-to('large') {
+        flex: 0 0 5%;
+        order: 1;
+      }
+    }  
+  }
+}
